# Spam-Detection-System

./: .gitignore  .pre-commit-config.yaml  0906.py  DISCLAIMER.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: config.yaml
demo/: app.py
notebooks/: example_usage.ipynb
scripts/: setup.py  test_system.py  train.py
src/: __init__.py
src/data/: __init__.py  dataset.py  preprocessing.py  splits.py
src/eval/: __init__.py  explainability.py  metrics.py
src/utils/: __init__.py  config.py  device.py  logging.py  seeding.py
tests/: __init__.py  test_data.py  test_models.py
